# RockyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Game  README.md  Rocky.csproj  main.cpp  resources.cfg  vcpkg.json
media/: Sinbad.material
scripts/: README.md  notes.md  setup-env.sh  setup-env.ts  setup.sh
src/: Bootstrap.cpp  FreeFlyController.cpp
src/Engine/: Bootstrap.cpp
src/Engine/Core/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Core.cs  EntryPoint.cpp  SystemBase.h
src/Engine/Core/Components/: CameraComponent.h  InputComponent.h  InstanceBinComponent.h  MeshComponent.h  ModelComponent.h  MusicComponent.h  NodeComponent.h  RotationComponent.h  TranformComponent.h  TranslationComponent.h  VisibilityComponent.h
src/Engine/Core/Systems/: AudioSystem.h  GraphicsSystem.h  InputSystem.h  ProfilingSystem.h  TransformSystem.h  VisibilitySystem.h  pbrcore.h  rlights.h
src/Engine/Renderer/: Renderer.cs
src/Engine/Scene/: Scene.h
src/Engine/Utilities/: Debug.h  Profiler.h
src/Engine/Utils/: FreeFlyController.h
src/Game/: EntryPoint.cpp  Program.cs
src/Game/Systems/: AsteroidSystem.h  FreeCameraSystem.h
